# prism-lb

./: .dockerignore  .gitignore  1  Cargo.toml  Dockerfile  README.md
example/: compose.yaml  example-backends.yaml
src/: backend.rs  config.rs  lib.rs  main.rs  parser.rs  server.rs  tcp_pool.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/fixtures/: test.yaml
